--- a/movies/src/main/resources/application.properties
+++ b/movies/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 #mongodb database configurations
 
 spring.data.mongodb.database=Movies-api-db
-spring.data.mongodb.uri=mongodb+srv://root:mymongodbdatabase@cluster0.wyjnta8.mongodb.net
+spring.data.mongodb.uri=mongodb+srv://{USerName}:{Password}@cluster0.wyjnta8.mongodb.net
